// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders without error for 1st doc 1`] = `
<DocumentFragment>
  .emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
}

.emotion-6 * {
  width: 50%;
  padding: 0.25rem;
  margin: auto;
}

.emotion-6 .prev-text,
.emotion-6 .next-text {
  display: none;
}

@media only screen and (min-width:640px) {
  .emotion-6 .next-word,
  .emotion-6 .prev-word {
    display: none;
  }

  .emotion-6 .prev-text,
  .emotion-6 .next-text {
    display: inline;
  }
}

.emotion-2 {
  text-align: left;
  padding: 0;
  margin: 0;
}

.emotion-1 {
  color: var(--link-blue);
  padding: 0.25rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
}

.emotion-1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 {
  padding: 0 0.5rem;
  font-size: 1.2rem;
}

.emotion-5 {
  text-align: right;
  padding: 0;
  margin: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
}

.emotion-6 * {
  width: 50%;
  padding: 0.25rem;
  margin: auto;
}

.emotion-6 .prev-text,
.emotion-6 .next-text {
  display: none;
}

@media only screen and (min-width:640px) {
  .emotion-6 .next-word,
  .emotion-6 .prev-word {
    display: none;
  }

  .emotion-6 .prev-text,
  .emotion-6 .next-text {
    display: inline;
  }
}

.emotion-2 {
  text-align: left;
  padding: 0;
  margin: 0;
}

.emotion-1 {
  color: var(--link-blue);
  padding: 0.25rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
}

.emotion-1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 {
  padding: 0 0.5rem;
  font-size: 1.2rem;
}

.emotion-5 {
  text-align: right;
  padding: 0;
  margin: 0;
}

<div
    class="emotion-6"
  >
    <div
      class="emotion-2"
    >
      <a
        class="emotion-1"
        href="/second-doc"
      >
        <span
          class="prev-text"
        >
          <span
            class="emotion-0"
          >
            ←
          </span>
          secondDoc
        </span>
        <span
          class="prev-word"
        >
          Prev
        </span>
      </a>
    </div>
    <div
      class="emotion-5"
    >
      <a
        class="emotion-1"
        href="/second-doc"
      >
        <span
          class="next-text"
        >
          secondDoc
          <span
            class="emotion-0"
          >
            →
          </span>
        </span>
        <span
          class="next-word"
        >
          Next
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Renders without error for 2nd doc 1`] = `
<DocumentFragment>
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
}

.emotion-3 * {
  width: 50%;
  padding: 0.25rem;
  margin: auto;
}

.emotion-3 .prev-text,
.emotion-3 .next-text {
  display: none;
}

@media only screen and (min-width:640px) {
  .emotion-3 .next-word,
  .emotion-3 .prev-word {
    display: none;
  }

  .emotion-3 .prev-text,
  .emotion-3 .next-text {
    display: inline;
  }
}

.emotion-2 {
  text-align: left;
  padding: 0;
  margin: 0;
}

.emotion-1 {
  color: var(--link-blue);
  padding: 0.25rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
}

.emotion-1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 {
  padding: 0 0.5rem;
  font-size: 1.2rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
}

.emotion-3 * {
  width: 50%;
  padding: 0.25rem;
  margin: auto;
}

.emotion-3 .prev-text,
.emotion-3 .next-text {
  display: none;
}

@media only screen and (min-width:640px) {
  .emotion-3 .next-word,
  .emotion-3 .prev-word {
    display: none;
  }

  .emotion-3 .prev-text,
  .emotion-3 .next-text {
    display: inline;
  }
}

.emotion-2 {
  text-align: left;
  padding: 0;
  margin: 0;
}

.emotion-1 {
  color: var(--link-blue);
  padding: 0.25rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
}

.emotion-1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 {
  padding: 0 0.5rem;
  font-size: 1.2rem;
}

<div
    class="emotion-3"
  >
    <div
      class="emotion-2"
    >
      <a
        class="emotion-1"
        href="/second-doc"
      >
        <span
          class="prev-text"
        >
          <span
            class="emotion-0"
          >
            ←
          </span>
          secondDoc
        </span>
        <span
          class="prev-word"
        >
          Prev
        </span>
      </a>
    </div>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Renders without error for 3rd doc 1`] = `
<DocumentFragment>
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
}

.emotion-3 * {
  width: 50%;
  padding: 0.25rem;
  margin: auto;
}

.emotion-3 .prev-text,
.emotion-3 .next-text {
  display: none;
}

@media only screen and (min-width:640px) {
  .emotion-3 .next-word,
  .emotion-3 .prev-word {
    display: none;
  }

  .emotion-3 .prev-text,
  .emotion-3 .next-text {
    display: inline;
  }
}

.emotion-1 {
  color: var(--link-blue);
  padding: 0.25rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
}

.emotion-1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 {
  padding: 0 0.5rem;
  font-size: 1.2rem;
}

.emotion-2 {
  text-align: right;
  padding: 0;
  margin: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
}

.emotion-3 * {
  width: 50%;
  padding: 0.25rem;
  margin: auto;
}

.emotion-3 .prev-text,
.emotion-3 .next-text {
  display: none;
}

@media only screen and (min-width:640px) {
  .emotion-3 .next-word,
  .emotion-3 .prev-word {
    display: none;
  }

  .emotion-3 .prev-text,
  .emotion-3 .next-text {
    display: inline;
  }
}

.emotion-1 {
  color: var(--link-blue);
  padding: 0.25rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
}

.emotion-1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 {
  padding: 0 0.5rem;
  font-size: 1.2rem;
}

.emotion-2 {
  text-align: right;
  padding: 0;
  margin: 0;
}

<div
    class="emotion-3"
  >
    <div />
    <div
      class="emotion-2"
    >
      <a
        class="emotion-1"
        href="/second-doc"
      >
        <span
          class="next-text"
        >
          secondDoc
          <span
            class="emotion-0"
          >
            →
          </span>
        </span>
        <span
          class="next-word"
        >
          Next
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
